syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.edu";
option java_outer_classname = "KeyManagerGrpc";
option objc_class_prefix = "HLW";
import "google/protobuf/timestamp.proto";

package br.com.zup.edu;

service KeyManagerGrpcService {
  rpc registraChavePix (ChavePixRequest) returns (ChavePixResponse) {}

  rpc deletaChavePix (IdPixRequest) returns (Empty) {}

  rpc consultaChavePixKeyManager (IdPixRequest) returns (ChavePixDetailResponse) {}

  rpc consultaChavePix (PixRequest) returns (ChavePixDetailResponse) {}

  rpc listaTodasChaves (ClienteRequest) returns (ChavesResponse) {}
}

message ChavesResponse {

  repeated ChaveResponse chaveResponse = 1;

}

message ChaveResponse {
  int64 pixId = 1;
  string identificador = 2;
  TipoChave tipoChave = 3;
  string chave = 4;
  TipoConta tipoConta = 5;
  google.protobuf.Timestamp criadoEm = 11;
}

message ClienteRequest {
    string identificador = 1;
}

message PixRequest {
  string chave = 1;
}

message ChavePixDetailResponse {

  int64 pixId = 1;
  string identificador = 2;
  TipoChave tipoChave = 3;
  string chave = 4;
  string nome = 5;
  string cpf = 6;
  string nomeInstituicao = 7;
  string agencia = 8;
  string numeroDaConta = 9;
  TipoConta tipoConta = 10;
  google.protobuf.Timestamp criadoEm = 11;

}

message Empty {}

message IdPixRequest{
  int64 pixId = 1;
  string identificador = 2;
}

message ChavePixRequest {

  string identificador = 1;
  TipoChave tipoChave = 2;
  string chave = 3;
  TipoConta tipoConta = 4;
}

enum TipoChave {
  CPF = 0;
  TELEFONE = 1;
  EMAIL = 2;
  CHAVE_ALEATORIA = 3;
}

enum TipoConta {
  CONTA_CORRENTE = 0;
  CONTA_POUPANCA = 1;
}

message ChavePixResponse {
  int64 pixId = 1;
}